# kcaloriebot

./: .gitignore  README.md  app.go  database.go  go.mod  handlers.go  main.py  plan.md  pyproject.toml  readers.go
.github/workflows/: ci.yml
kcaloriebot/: __init__.py  __main__.py  bot.py  callbacks.py  config.py  database.py  domain.py  legacy.py  migrate.py  render.py
tests/: __init__.py  test_bot_handlers.py  test_callbacks.py  test_config.py  test_database.py  test_domain.py  test_legacy.py  test_timezones.py
